--- a/templates/ability_list.jinja2
+++ b/templates/ability_list.jinja2
@@ -15,7 +15,7 @@ Ability List
 		</tr> 
 		{% for ability in abilities %}
 		<tr>
-			<td><a href="/ability/{{ ability.name|slug }}.html">{{ ability.name }}</a></td>
+			<td><a href="{{ url_base }}/ability/{{ ability.name|slug }}.html">{{ ability.name }}</a></td>
 			<td>{{ ability.desc }}</td>
 		</tr>
 		{% endfor %}
