--- a/templates/ability_view.jinja2
+++ b/templates/ability_view.jinja2
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="backlinks">
-	<a href="/abilities.html">Ability List</a>
+	<a href="{{ url_base }}/abilities.html">Ability List</a>
 </div>
 
 <section>
@@ -35,7 +35,7 @@
 	</tr> 
 	{% for form in ability.forms %}
 	<tr>
-		<td><a href="/pokemon/{{ form.pokemon|slug }}.html#{{ form.name|slug }}">{{ pokemon_form_name(form.pokemon, form.name) }}</a></td>
+		<td><a href="{{ url_base }}/pokemon/{{ form.pokemon|slug }}.html#{{ form.name|slug }}">{{ pokemon_form_name(form.pokemon, form.name) }}</a></td>
 		<td>{{ form.slot }}</td>
 	</tr>
 	{% endfor %}
