--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>{% block title %}{% endblock %} - Pokémon Reborn Database</title>
-		<link rel="stylesheet" href="/style.css">
+		<link rel="stylesheet" href="{{ url_base }}/style.css">
 		{% block links %}
 		{% endblock %}
 		<style>
@@ -14,7 +14,7 @@
 		{% endblock %}
 	</head>
 	<body>
-		<a id="title" href="/">Pokémon Reborn Database</a>
+		<a id="title" href="{{ url_base }}/">Pokémon Reborn Database</a>
 		{% block content %}
 		{% endblock %}
 	</body>
