--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block script %}
-<script src="/js/thirdparty/sql-wasm.js"></script>
+<script src="{{ url_base }}/js/thirdparty/sql-wasm.js"></script>
 <script type="module">
-	import {setupDb} from '/js/db.js';
+	import {setupDb} from '{{ url_base }}/js/db.js';
 
 	function slugify(s) {
 		return s.toLowerCase();
@@ -128,12 +128,12 @@ from "type" where "name" = :query
 <h1>Lists</h1>
 
 <ul>
-	<li><a href="pokemon.html">Pokémon</a></li>
-	<li><a href="moves.html">Moves</a></li>
-	<li><a href="abilities.html">Abilities</a></li>
-	<li><a href="items.html">Items</a></li>
-	<li><a href="areas.html">Areas</a></li>
-	<li><a href="trainers.html">Trainers</a></li>
+	<li><a href="{{ url_base }}/pokemon.html">Pokémon</a></li>
+	<li><a href="{{ url_base }}/moves.html">Moves</a></li>
+	<li><a href="{{ url_base }}/abilities.html">Abilities</a></li>
+	<li><a href="{{ url_base }}/items.html">Items</a></li>
+	<li><a href="{{ url_base }}/areas.html">Areas</a></li>
+	<li><a href="{{ url_base }}/trainers.html">Trainers</a></li>
 </ul>
 
 </section>
@@ -142,8 +142,8 @@ from "type" where "name" = :query
 <h1>Tools</h1>
 
 <ul>
-	<li><a href="statcalc.html">Stat Calculator</a></li>
-	<li><a href="admin.html">Custom Query Runner</a></li>
+	<li><a href="{{ url_base }}/statcalc.html">Stat Calculator</a></li>
+	<li><a href="{{ url_base }}/admin.html">Custom Query Runner</a></li>
 </ul>
 
 </section>
