--- a/templates/item_view.jinja2
+++ b/templates/item_view.jinja2
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="backlinks">
-	<a href="/items.html">Item List</a>
+	<a href="{{ url_base }}/items.html">Item List</a>
 </div>
 
 <section>
