--- a/templates/move_view.jinja2
+++ b/templates/move_view.jinja2
@@ -14,7 +14,7 @@
 			<th>Damage class</th>
 			<td>{{ move.damage_class }}</td>
 			<th>Type</th>
-			<td><a href="/type/{{ move.type|slug }}.html">
+			<td><a href="{{ url_base }}/type/{{ move.type|slug }}.html">
 				{{ type_icon(move.type) }}
 			</a></td>
 			<th>Target</th>
