--- a/templates/trainer_list.jinja2
+++ b/templates/trainer_list.jinja2
@@ -26,11 +26,11 @@ figure { display: inline-block; }
 	<figure>
 		{# it takes 5 seconds or so to load the page, so we probably still
 		need to use a spritesheet #}
-		<a href="/trainer/{{ trainer.name|slug|urlencode }}.html" class="sprite">
+		<a href="{{ url_base }}/trainer/{{ trainer.name|slug|urlencode }}.html" class="sprite">
 			<img src="data:image/png;base64,{{ trainer.sprite }}" alt="">
 		</a>
 		<figcaption>
-			<a href="/trainer/{{ trainer.name|slug|urlencode }}.html">{{ trainer.name }}</a>
+			<a href="{{ url_base }}/trainer/{{ trainer.name|slug|urlencode }}.html">{{ trainer.name }}</a>
 		</figcaption>
 	</figure>
 {% endfor %}
