--- a/templates/type_chart.jinja2
+++ b/templates/type_chart.jinja2
@@ -51,14 +51,14 @@ a.type-icon {
 			<tr>
 				<th></th>
 				{% for type in types %}
-				<th><a class="type-icon {{ type|slug }}-type-color" href="types/{{ type|slug }}.html">
+				<th><a class="type-icon {{ type|slug }}-type-color" href="{{ url_base }}/types/{{ type|slug }}.html">
 					{{ type }}
 				</a></th>
 				{% endfor %}
 			</tr>
 			{% for attacking_type in types %}
 			<tr>
-				<th><a class="type-icon {{ attacking_type|slug }}-type-color" href="types/{{ attacking_type|slug }}.html">
+				<th><a class="type-icon {{ attacking_type|slug }}-type-color" href="{{ url_base }}/types/{{ attacking_type|slug }}.html">
 					{{ attacking_type }}
 				</a></th>
 				{% for defending_type in types %}
