--- a/templates/item_list.jinja2
+++ b/templates/item_list.jinja2
@@ -18,7 +18,7 @@ Item List
 		</tr> 
 		{% for item in items %}
 		<tr>
-			<td><a href="/item/{{ item.name|slug }}.html">{{ item.name }}</a></td>
+			<td><a href="{{ url_base }}/item/{{ item.name|slug }}.html">{{ item.name }}</a></td>
 			<td>{{ item.pocket }}</td>
 			<td>{{ item.buy_price }}</td>
 			<td>{{ item.sell_price }}</td>
