--- a/templates/move_list.jinja2
+++ b/templates/move_list.jinja2
@@ -21,9 +21,9 @@ Move List
 		</tr> 
 		{% for move in moves %}
 		<tr>
-			<td><a href="/move/{{ move.name|slug }}.html">{{ move.name }}</a></td>
+			<td><a href="{{ url_base }}/move/{{ move.name|slug }}.html">{{ move.name }}</a></td>
 			<td>{{ move.damage_class }}</td>
-			<td><a href="/type/{{ move.type|slug }}.html">
+			<td><a href="{{ url_base }}/type/{{ move.type|slug }}.html">
 				{{ type_icon(move.type) }}
 			</a></td>
 			<td>{{ move.power }}</td>
