add some z move info to db

--- a/templates/ability_view.jinja2
+++ b/templates/ability_view.jinja2
@@ -28,7 +28,7 @@
 
 {% if ability.forms %}
 
-<table class="data=table" style="margin: auto">
+<table class="data=table" style="margin: auto; width: 60%">
 	<tr>
 		<th>Name</th>
 		<th>Slot</th>
