--- a/templates/pokemon_view.jinja2
+++ b/templates/pokemon_view.jinja2
@@ -109,13 +109,13 @@
 				<th>Category</th>
 				<td>{{ pokemon.category }} Pokémon</td>
 				<th>Steps to hatch</th>
-				<td>{{ pokemon.hatch_steps }}
+				<td>{{ pokemon.hatch_steps }}</td>
 				<th>Base EXP yield</th>
-				<td>{{ pokemon.base_exp }}
+				<td>{{ pokemon.base_exp }}</td>
 			</tr>
 			<tr>
 				<th>Base friendship</th>
-				<td>{{ pokemon.base_friendship }}
+				<td>{{ pokemon.base_friendship }}</td>
 				<th>Egg groups</th>
 				<td colspan="3">
 					{% for egg_group in pokemon.egg_groups %}
@@ -128,7 +128,7 @@
 	</div>
 
 	<hr>
-
+	
 	{% if len(pokemon.forms) > 1 %}
 	<ul class="tabs" id="hash-tabs">
 		{% for form in pokemon.forms %}
@@ -237,7 +237,7 @@
 				<th>Weight</th>
 				<td>{{ form.weight_pounds }} lb / {{ form.weight_kg }} kg</td>
 				<th>Catch Rate</th>
-				<td>{{ form.catch_rate }}
+				<td>{{ form.catch_rate }}</td>
 			</tr>
 			<tr>
 				<th>Wild held items</th>
