--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -108,11 +108,11 @@ from "type" where "name" = :query
 
 <p>Basically, this website is <a href="https://pokemondb.net/">pokemondb</a>, but for <a href="https://www.rebornevo.com/pr/index.html/">Pokémon Reborn</a>. It's a place where you can get information on Pokémon, moves, items, etc., where the information will be valid for Pokémon Reborn, where Reborn differs from the official Pokémon games. It also contains Reborn-specific information on encounters, trainers, etc.</p>
 
-<p>To get started, try searching for something, or select one of the lists below.</p>
+<p>To get started,<!-- try searching for something, or--> select one of the links below.</p>
 
 </section>
 
-<section>
+<!--<section>
 
 <h1>Search</h1>
 
@@ -122,7 +122,7 @@ from "type" where "name" = :query
 
 <div id="search-results"></div>
 
-</section>
+</section>-->
 
 <section>
 <h1>Lists</h1>
@@ -143,9 +143,12 @@ from "type" where "name" = :query
 
 <ul>
 	<li><a href="{{ url_base }}/statcalc.html">Stat Calculator</a></li>
-	<li><a href="{{ url_base }}/admin.html">Custom Query Runner</a></li>
+	<!--<li><a href="{{ url_base }}/admin.html">Custom Query Runner</a></li>-->
 </ul>
 
+</section>
+
+<section>
 </section>
 
 {% endblock %}
