move pokemon, egg groups

--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -149,6 +149,12 @@ from "type" where "name" = :query
 </section>
 
 <section>
+<h1>Other stuff</h1>
+
+<ul>
+  <li><a href="{{ url_base }}/about.html">About this website</a></li>
+  <li><a href="{{ url_base }}/changelog.html">Changelog</a></li>
+</ul>
 </section>
 
 {% endblock %}
