--- a/templates/macros.jinja2
+++ b/templates/macros.jinja2
@@ -52,7 +52,7 @@
 {% endmacro %}
 
 {% macro base64_image(base64, alt, width, height) %}
-<img src="data:image/png;base64,{{ base64 }}" alt="{{ alt }}" width="{{ width }}" height="{{ height }}">
+<img src="data:image/png;base64,{{ base64 }}" alt="{{ alt }}" width="{{ width }}" height="{{ height }}" loading="lazy">
 {% endmacro %}
 
 {% macro pokemon_sprite_row(sprites, width, height) %}
