--- a/templates/pokemon_view.jinja2
+++ b/templates/pokemon_view.jinja2
@@ -319,7 +319,7 @@
 						{% for move in form.level_moves %}
 						<tr>
 							<td>{{ move.level }}</td>
-							<td><a href="{{ url_base }}/move/{{ move.name|slug }}.html">{{ move.name }}</a></td>
+							<td><a href="{{ url_base }}/move/{{ move.id }}.html">{{ move.name }}</a></td>
 						</tr>
 						{% endfor %}
 					</table>
@@ -332,7 +332,7 @@
 					<table>
 						{% for move in form.evolution_moves %}
 						<tr>
-							<td><a href="{{ url_base }}/move/{{ move|slug }}.html">{{ move }}</a></td>
+							<td><a href="{{ url_base }}/move/{{ move.id }}.html">{{ move.name }}</a></td>
 						</tr>
 						{% endfor %}
 					</table>
@@ -352,7 +352,7 @@
 				    {% for move in form.preevo_moves %}
 				    <tr>
 				      <td><a href="{{ url_base }}/pokemon/{{ move.preevo|slug }}.html#{{ move.preevo_form }}">{{ pokemon_form_name(move.preevo, move.preevo_form) }}</a></td>
-				      <td><a href="{{ url_base }}/move/{{ move.name|slug }}.html">{{ move.name }}</a></td>
+				      <td><a href="{{ url_base }}/move/{{ move.id }}.html">{{ move.name }}</a></td>
 				      <td>
 				        {% if move.method == 'level' %}
 				          {% if move.level == 0 %}
@@ -380,7 +380,7 @@
 					<table>
 						{% for move in form.egg_moves %}
 						<tr>
-							<td><a href="{{ url_base }}/move/{{ move|slug }}.html">{{ move }}</a></td>
+							<td><a href="{{ url_base }}/move/{{ move.id }}.html">{{ move.name }}</a></td>
 						</tr>
 						{% endfor %}
 					</table>
@@ -398,7 +398,7 @@
 						{% for move in form.machine_moves %}
 						<tr>
 							<td><a href="{{ url_base }}/item/{{ move.item|slug }}.html">{{ move.item }}</a></td>
-							<td><a href="{{ url_base }}/move/{{ move.name|slug }}.html">{{ move.name }}</a></td>
+							<td><a href="{{ url_base }}/move/{{ move.id }}.html">{{ move.name }}</a></td>
 						</tr>
 						{% endfor %}
 					</table>
@@ -411,7 +411,7 @@
 					<table>
 						{% for move in form.tutor_moves %}
 						<tr>
-							<td><a href="{{ url_base }}/move/{{ move|slug }}.html">{{ move }}</a></td>
+							<td><a href="{{ url_base }}/move/{{ move.id }}.html">{{ move.name }}</a></td>
 						</tr>
 						{% endfor %}
 					</table>
