--- a/templates/pokemon_sprites.jinja2
+++ b/templates/pokemon_sprites.jinja2
@@ -32,18 +32,22 @@
       <th>Back</th>
       {{ pokemon_sprite_row(back_sprite, 192, 192) }}
     </tr>
+    {% if egg_sprite.exists %}
     <tr>
       <th>Egg</th>
       {{ pokemon_sprite_row(egg_sprite, 64, 64) }}
     </tr>
+    {% endif %}
     <tr>
       <th>Icon</th>
       {{ pokemon_sprite_row(icon, 64, 64) }}
     </tr>
+    {% if egg_icon.exists %}
     <tr>
       <th>Egg icon</th>
       {{ pokemon_sprite_row(egg_icon, 64, 64) }}
     </tr>
+    {% endif %}
   </table>
 </section>
 {% endblock %}
