--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -153,7 +153,7 @@ from "type" where "name" = :query
 
 <ul>
   <li><a href="{{ url_base }}/about.html">About this website</a></li>
-  <li><a href="{{ url_base }}/changelog.html">Changelog</a></li>
+  <!--<li><a href="{{ url_base }}/changelog.html">Changelog</a></li>-->   <!--nah, can't be bothered keeping this updated-->
 </ul>
 </section>
 
