--- a/templates/pokemon_view.jinja2
+++ b/templates/pokemon_view.jinja2
@@ -104,7 +104,7 @@
 				<th>Gender Ratio</th>
 				<td style="white-space: nowrap">{{ pokemon.male_frequency|gender_ratio }}</td>
 				<th>Growth rate</th>
-				<td><a href="{{ url_base }}/growth_rate/{{ pokemon.growth_rate|slug }}.html">{{ pokemon.growth_rate }}</a></td>
+				<td><a href="{{ url_base }}/growth_rates.html#{{ pokemon.growth_rate.id|slug }}">{{ pokemon.growth_rate.name }}</a></td>
 			</tr>
 			<tr>
 				<th>Category</th>
@@ -120,7 +120,7 @@
 				<th>Egg groups</th>
 				<td colspan="3">
 					{% for egg_group in pokemon.egg_groups %}
-						<a href="{{ url_base }}/egg_group/{{ egg_group|slug }}.html">{{ egg_group }}</a>{% if not loop.last %},{% endif %}
+						<a href="{{ url_base }}/egg_groups.html#{{ egg_group.id|slug }}">{{ egg_group.name }}</a>{% if not loop.last %},{% endif %}
 					{% endfor %}
 				</td>
 			</tr>
@@ -155,11 +155,11 @@
 			  {% endif %}
 				<!--<img src="/img/pokemon/{{ '{0:0>3}'.format(pokemon.number) }}_{{ form.order }}.png">-->
 				<figcaption>
-				  <a href="{{ url_base }}/pokemon_sprites/{{ pokemon.name|slug }}/{{ form.name|slug }}.html">More sprites</a>
+				  <a href="{{ url_base }}/pokemon_sprites/{{ pokemon.name|slug }}_{{ form.name|slug }}.html">More sprites</a>
 				</figcaption>
 			</figure>
 
-			<table class="data-table" style="width: 40%; margin-right: 0.5em; table-layout: fixed">
+			<table class="data-table" style="width: 40%; margin-right: 0.5em">
 				<tr>
 					<th style="width: 4em">Type</th>
 					<td style="flex: 1">
