--- a/templates/macros.jinja2
+++ b/templates/macros.jinja2
@@ -1,7 +1,7 @@
 {% macro type_icon(type) %}
 <a
 	class="type-icon {{ type|slug }}-type-color"
-	href="{{ url_base }}/types/{{ type|slug }}.html"
+	{#href="{{ url_base }}/types/{{ type|slug }}.html"#}
 >
 	{{ type }}
 </a>
@@ -51,9 +51,7 @@
 {% endif %}
 {% endmacro %}
 
-{% macro base64_image(base64, alt, width, height) %}
-<img src="data:image/png;base64,{{ base64 }}" alt="{{ alt }}" width="{{ width }}" height="{{ height }}" loading="lazy">
-{% endmacro %}
+{% macro base64_image(base64, alt, width, height) %}<img src="data:image/png;base64,{{ base64 }}" alt="{{ alt }}" width="{{ width }}" height="{{ height }}" loading="lazy">{% endmacro %}
 
 {% macro pokemon_sprite_row(sprites, width, height) %}
 {% if sprites.genderdiff %}
