--- a/templates/pokemon_view.jinja2
+++ b/templates/pokemon_view.jinja2
@@ -104,7 +104,7 @@
 				<th>Gender Ratio</th>
 				<td style="white-space: nowrap">{{ pokemon.male_frequency|gender_ratio }}</td>
 				<th>Growth rate</th>
-				<td><a href="{{ url_base }}/growth_rates.html#{{ pokemon.growth_rate.id|slug }}">{{ pokemon.growth_rate.name }}</a></td>
+				<td><a href="{{ url_base }}/growth_rates.html#{{ pokemon.growth_rate.id }}">{{ pokemon.growth_rate.name }}</a></td>
 			</tr>
 			<tr>
 				<th>Category</th>
@@ -120,7 +120,7 @@
 				<th>Egg groups</th>
 				<td colspan="3">
 					{% for egg_group in pokemon.egg_groups %}
-						<a href="{{ url_base }}/egg_groups.html#{{ egg_group.id|slug }}">{{ egg_group.name }}</a>{% if not loop.last %},{% endif %}
+						<a href="{{ url_base }}/egg_groups.html#{{ egg_group.id }}">{{ egg_group.name }}</a>{% if not loop.last %},{% endif %}
 					{% endfor %}
 				</td>
 			</tr>
