fix trainer move links

--- a/templates/egg_group_list.jinja2
+++ b/templates/egg_group_list.jinja2
@@ -11,7 +11,7 @@ Egg Groups
 
 	{% for egg_group in egg_groups %}
 	<section>
-		<h2>{{ egg_group.name }}</h2>
+		<h2 id="{{ egg_group.id }}">{{ egg_group.name }}</h2>
 
 	  	{% for pokemon in egg_group.pokemon %}
 	  	<figure class="inline">
