actual trainer move fix

--- a/templates/trainer_view.jinja2
+++ b/templates/trainer_view.jinja2
@@ -145,7 +145,7 @@
 					<table style="margin-left: 1em">
 						<tr>
 						{% for move in pokemon.moves %}
-							<td><a href="{{ url_base }}/move/{{ move.id|slug }}.html">{{ move.name }}</a></td>
+							<td><a href="{{ url_base }}/move/{{ move.id }}.html">{{ move.name }}</a></td>
 						{% endfor %}
 						</tr>
 					</table>
